--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <!-- 身體 -網頁內容 -->
 <body>
     <div id="box">
+        <!-- 導覽列元素 - 放logo,分頁連結-有語意 提升SEO -->
         <nav>
             <a href="index.html">JING 飲料店</a>
             <div>
@@ -27,7 +28,29 @@
                 <a href="#">聯絡我</a>
             </div>
         </nav>
+        <!-- 內容區塊元素-標題、內文或按鈕等-有語意 -->
+        <section>
+            <h1>我們是 JING 飲料店</h1>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, quas.
+            </p>
+            <a href="#">前往購買</a>
+            <hr>
+            <!-- 圖片按扭區塊 -->
+            <section>
+                <!-- (a[href="#"]>img)*3 -->
+                <a href="#"><img src="person.png" alt="關於我"></a>
+                <a href="#"><img src="drink.png" alt="飲料"></a>
+                <a href="#"><img src="phone.png" alt="聯絡我"></a>
+
+            </section>
+
+        </section>
     </div>
+    <!-- 頁尾 -->
+    <footer>
+        JING 飲料店 &copy;2019
+    </footer>
     
 </body>
 </html>
