所有元素:字型和顏色

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <!-- 網站標題 - 瀏覽器標籤 -->
     <title>JING 飲料店</title>
     <!-- css 區塊 - 內部樣式 -->
-    <style>
+    <!-- <style>
         #box{
             background-color:rgba(0,0,0,0.3);
             height: 500px;
         }
-    </style>
+    </style> -->
+    <!-- 連接外部 css 檔案 -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <!-- 身體 -網頁內容 -->
 <body>
@@ -46,11 +48,12 @@
             </section>
 
         </section>
-    </div>
-    <!-- 頁尾 -->
+        <!-- 頁尾 -->
     <footer>
         JING 飲料店 &copy;2019
     </footer>
+    </div>
+   
     
 </body>
 </html>
