--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="box">
         <!-- 導覽列元素 - 放logo,分頁連結-有語意 提升SEO -->
         <nav>
-            <a href="index.html">JING 飲料店</a>
+            <a href="index.html" id="logo">JING 飲料店</a>
             <div>
                 <a href="#">關於我</a>
                 <a href="#">故事</a>
@@ -31,29 +31,30 @@
             </div>
         </nav>
         <!-- 內容區塊元素-標題、內文或按鈕等-有語意 -->
-        <section>
+        <section id="content">
             <h1>我們是 JING 飲料店</h1>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, quas.
             </p>
             <a href="#">前往購買</a>
             <hr>
+        </section>
             <!-- 圖片按扭區塊 -->
-            <section>
+            <section id="button">
                 <!-- (a[href="#"]>img)*3 -->
-                <a href="#"><img src="person.png" alt="關於我"></a>
-                <a href="#"><img src="drink.png" alt="飲料"></a>
+                <a href="#"class="button-mr"><img src="person.png" alt="關於我"></a>
+                <a href="#"class="button-mr"><img src="drink.png" alt="飲料"></a>
                 <a href="#"><img src="phone.png" alt="聯絡我"></a>
 
             </section>
 
-        </section>
-        <!-- 頁尾 -->
+        </div>
+    <!-- 頁尾 -->
+    <!-- 按alt 上或下就可以搬家 -->
     <footer>
         JING 飲料店 &copy;2019
     </footer>
-    </div>
-   
+        
     
 </body>
 </html>
