關於我頁面完成

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav>
             <a href="index.html" id="logo">JING 飲料店</a>
             <div>
-                <a href="#">關於我</a>
+                <a href="about.html">關於我</a>
                 <a href="#">故事</a>
                 <a href="#">聯絡我</a>
             </div>
